src/objects/c2g__codaInvoice__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpinvoice</customHelpPage>
    <description>Holds information that applies to the whole invoice such as customer account and due date.</description>
    <fields>
        <fullName>Custom_Invoice_Status__c</fullName>
        <label>Custom Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Query</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Payment Plan</fullName>
                </value>
                <value>
                    <fullName>Expected Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Notes__c</fullName>
        <label>Invoice Notes</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Print_Sales_Invoice_PDF1__c</fullName>
        <description>##Conga created btn:00b25000000EBX1</description>
        <formula>&quot;&amp;id=&quot; + Id + &quot; &quot; + 
&quot;&amp;queryid=[SIPT1]a9A250000005jL7,[SIIG]a9A250000005jL8,[SILIG]a9A250000005jL9,[SID]a9A250000005jLA,[SIVTC]a9A250000005jLB,[SIDST]a9A250000005jLC,[SIPT4]a9A250000005jLD,[SIILI]a9A250000005jLE,[SIDST3]a9A250000005jLF,[SICF]a9A250000005jLG,[SIPT5]a9A250000005jLH,[SIPT3]a9A250000005jLI,[SIA]a9A250000005jLJ,[SIDST4]a9A250000005jLK,[SILI]a9A250000005jLL,[SIPT2]a9A250000005jLM,[SIDST2]a9A250000005jLN,[SIDSV]a9A250000005jLO,[SIDTL]a9A250000005jLP,[SILIC]a9A250000005jLQ,[SICTC1]a9A250000005jLR,[SICTC2]a9A250000005jLS&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Download&quot; + 
&quot;&amp;ofn=&quot; + Name +
&quot;&amp;mfts0=ffaci__CongaPrintStatus__c&quot; + 
&quot;&amp;mftsvalue0=Printed&quot; + 
&quot;&amp;uf0=1&quot; + 
&quot;&amp;templateid=&quot; + ffaci__CongaTemplate__c +
&quot;&amp;dv0=&quot; + IF ( ISPICKVAL(c2g__InvoiceStatus__c, &quot;Complete&quot;), &quot;&quot;, &quot;Draft&quot;) +
&quot;&amp;currencyculture=&quot; + ffaci__CurrencyCulture__c +
&quot;&amp;dv1=&quot; + ffaci__CurrencyCulture__c</formula>
        <label>Print Sales Invoice PDF1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountCurrency__c</fullName>
        <formula>c2g__Account__r.c2g__CODAAccountTradingCurrency__c</formula>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountOutstanding__c</fullName>
        <formula>c2g__Transaction__r.c2g__AccountOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountTotal__c</fullName>
        <formula>c2g__Transaction__r.c2g__AccountTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BillingAddress__c</fullName>
        <formula>c2g__Account__r.BillingStreet + &apos; &apos; + c2g__Account__r.BillingCity + &apos; &apos; + c2g__Account__r.BillingState + &apos; &apos; + c2g__Account__r.BillingPostalCode + &apos; &apos; + c2g__Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CompanyReference__c</fullName>
        <description>Company Reference</description>
        <formula>c2g__OwnerCompany__r.Name</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CopyAccountValues__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Account Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CopyDefaultPrintedTextDefinitions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Default Printed Text Definitions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CreatingRecurringInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creating Recurring Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Currency__c</fullName>
        <description>Invoice currency.</description>
        <formula>c2g__InvoiceCurrency__r.Name</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerReference__c</fullName>
        <description>The customer reference.</description>
        <label>Customer Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveDueDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <description>The reason this Invoice was discarded.</description>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentOutstandingTotal__c</fullName>
        <description>Invoice Outstanding.</description>
        <formula>c2g__Transaction__r.c2g__DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentTotal__c</fullName>
        <description>Invoice Total.</description>
        <formula>c2g__Transaction__r.c2g__DocumentTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <description>The date the invoice is due for payment.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FirstDueDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date the invoice is due for the first payment.</description>
        <label>First Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GLA used for Income Schedule</description>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>SalesInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GenerateAdjustmentJournal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked a currency adjustment journal will be automatically generated when you post this invoice in a multi-currency environment.</description>
        <label>Generate Adjustment Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Sales Invoices (Income Schedule Group)</relationshipLabel>
        <relationshipName>SalesInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>SalesInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Interval__c</fullName>
        <description>Payment schedule interval</description>
        <label>Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__InvoiceCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date the sales invoice was created.</description>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceDescription__c</fullName>
        <description>A description of the invoice.</description>
        <label>Invoice Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Invoice Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceStatus__c</fullName>
        <description>The current status of the invoice.</description>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Ready to Post</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__InvoiceTotal__c</fullName>
        <description>The total value of all the items on the invoice, including the tax.</description>
        <formula>c2g__NetTotal__c +  c2g__TaxTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MatchType__c</fullName>
        <formula>TEXT(c2g__Transaction__r.c2g__MatchType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NetTotal__c</fullName>
        <description>The total value of items on the invoice, before tax.</description>
        <label>Net Total</label>
        <summarizedField>c2g__codaInvoiceLineItem__c.c2g__NetValue__c</summarizedField>
        <summaryForeignKey>c2g__codaInvoiceLineItem__c.c2g__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__NumberOfPayments__c</fullName>
        <description>Payment schedule number of payments</description>
        <label>Number of Payments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NumberofJournals__c</fullName>
        <label>Number of Journals</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity to which this invoice is related.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OutstandingValue__c</fullName>
        <formula>c2g__Transaction__r.c2g__DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentScheduleTotal__c</fullName>
        <label>PaymentScheduleTotal</label>
        <summarizedField>c2g__codaInvoiceInstallmentLineItem__c.c2g__Amount__c</summarizedField>
        <summaryForeignKey>c2g__codaInvoiceInstallmentLineItem__c.c2g__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentSchedule__c</fullName>
        <label>Payment Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( c2g__InvoiceStatus__c, &apos;Complete&apos; ) ),
&apos;Not Applicable&apos;,
if( c2g__Transaction__r.c2g__DocumentOutstandingTotal__c == 0,&apos;Paid&apos;,
if( c2g__Transaction__r.c2g__DocumentTotal__c == c2g__Transaction__r.c2g__DocumentOutstandingTotal__c, &apos;Unpaid&apos;,
&apos;Part Paid&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodInterval__c</fullName>
        <label>Period Interval</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PrintStatus__c</fullName>
        <label>Print Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Printed</fullName>
                    <default>true</default>
                    <label>Not Printed</label>
                </value>
                <value>
                    <fullName>Printed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 1 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1Heading__c</fullName>
        <label>Printed Text 1 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1TextDefinitionName__c</fullName>
        <label>Printed Text 1 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1Text__c</fullName>
        <label>Printed Text 1 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 2 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2Heading__c</fullName>
        <label>Printed Text 2 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2TextDefinitionName__c</fullName>
        <label>Printed Text 2 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2Text__c</fullName>
        <label>Printed Text 2 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 3 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3Heading__c</fullName>
        <label>Printed Text 3 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3TextDefinitionName__c</fullName>
        <label>Printed Text 3 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3Text__c</fullName>
        <label>Printed Text 3 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SalesTaxDocumentCode__c</fullName>
        <label>External tax document code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SalesTaxStatus__c</fullName>
        <description>The current tax status of the invoice.</description>
        <label>External Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Calculated</fullName>
                    <default>true</default>
                    <label>Not Calculated</label>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ShippingAddress__c</fullName>
        <formula>c2g__Account__r.ShippingStreet + &apos; &apos; + c2g__Account__r.ShippingCity + &apos; &apos; + c2g__Account__r.ShippingState + &apos; &apos; + c2g__Account__r.ShippingPostalCode + &apos; &apos; + c2g__Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ShippingMethod__c</fullName>
        <description>The method of delivery.</description>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Tax1Total__c</fullName>
        <label>Tax 1 Total</label>
        <summarizedField>c2g__codaInvoiceLineItem__c.c2g__TaxValue1__c</summarizedField>
        <summaryForeignKey>c2g__codaInvoiceLineItem__c.c2g__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Tax2Total__c</fullName>
        <label>Tax 2 Total</label>
        <summarizedField>c2g__codaInvoiceLineItem__c.c2g__TaxValue2__c</summarizedField>
        <summaryForeignKey>c2g__codaInvoiceLineItem__c.c2g__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Tax3Total__c</fullName>
        <label>Tax 3 Total</label>
        <summarizedField>c2g__codaInvoiceLineItem__c.c2g__TaxValue3__c</summarizedField>
        <summaryForeignKey>c2g__codaInvoiceLineItem__c.c2g__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoices (Tax Code)</relationshipLabel>
        <relationshipName>InvoicesTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoices (Tax Code 2)</relationshipLabel>
        <relationshipName>InvoicesTaxCode2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoices (Tax Code 3)</relationshipLabel>
        <relationshipName>InvoicesTaxCode3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Usepartperiods__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Part Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffaci__CongaPrintStatus__c</fullName>
        <label>Conga Print Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Printed</fullName>
                    <default>true</default>
                    <label>Not Printed</label>
                </value>
                <value>
                    <fullName>Printed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffaci__CongaTemplate__c</fullName>
        <formula>c2g__OwnerCompany__r.ffaci__CongaTemplateSalesInvoice__c</formula>
        <label>Conga Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffaci__CurrencyCulture__c</fullName>
        <label>Currency Culture</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffaci__InvoiceEmail__c</fullName>
        <formula>c2g__Account__r.c2g__CODAInvoiceEmail__c</formula>
        <label>Invoice Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbext__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__SFContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Sales_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Exclude_From_Reminder_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this flag to exclude this SIN from the reminder process (means no reminders will be generated for it, and it will not appear in the reminder documents).</description>
        <inlineHelpText>Set this flag to exclude this SIN from the reminder process (means no reminders will be generated for it, and it will not appear in the reminder documents).</inlineHelpText>
        <label>Exclude From Reminder Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__In_Dispute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Dispute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Last_Reminder_Generated_Date__c</fullName>
        <description>The most recent date/time this SIN was included (as overdue) on a reminder.</description>
        <inlineHelpText>The most recent date/time this SIN was included (as overdue) on a reminder.</inlineHelpText>
        <label>Last Reminder Generated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Last_Reminder_Severity_Level__c</fullName>
        <description>The most recent severity this SIN was flagged as in a reminder.</description>
        <inlineHelpText>The most recent severity this SIN was flagged as in a reminder.</inlineHelpText>
        <label>Last Reminder Severity Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Severity_Blocked_Until_Date__c</fullName>
        <description>The reminder severity of this SIN will not increase until the date in this field.</description>
        <inlineHelpText>The reminder severity of this SIN will not increase until the date in this field.</inlineHelpText>
        <label>Severity Blocked Until Date</label>
        <type>DateTime</type>
    </fields>
    <label>Sales Invoice</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_codaInvoice</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>